Added database backup to dropbox feature

--- a/env.example
+++ b/env.example
@@ -14,4 +14,4 @@ MAILGUN_SERVER=mailgun server url
 
 MAILGUN_API_KEY=mailgun api key
 
-DBBACKUP_PATH=/home/bgt/backup/daily_cost/db/
+DROPBOX_ACCESS_TOKEN=dropbox access token
