--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.10.5
 django-dbbackup==3.1.3
+django-filter==1.0.1
 django-environ==0.4.1
 gunicorn==19.6.0
 ipython==5.1.0
@@ -9,4 +10,3 @@ requests==2.12.4
 PyJWT==1.4.2
 dropbox==7.1.1
 django-storages==1.5.2
-django-dbbackup==3.1.3
